Lower down animation time Replace order forms with latest version

--- a/JanperWebsite/Views/TradeArea/TradeArea.cshtml
+++ b/JanperWebsite/Views/TradeArea/TradeArea.cshtml
@@ -153,16 +153,16 @@
     <div class="content-wrapper half">
       <ul>
         <li>
-          Sample Order Form <a href="~/Download/Sample Order Form - Duraform.pdf" target="_blank">DOWNLOAD</a>
+          Sample Order Form <a href="~/Download/Sample Order Form - Duraform.pdf?v=4" target="_blank">DOWNLOAD</a>
         </li>
         <li>
-          DuraForm Doors Order Form <a href="~/Download/Duraform Doors Order Form.pdf" target="_blank">DOWNLOAD</a>
+          DuraForm Doors Order Form <a href="~/Download/Duraform Doors Order Form.pdf?v=4" target="_blank">DOWNLOAD</a>
         </li>
         <li>
-          Flat Pack Order Form <a href="~/Download/Flat Pack Order Form.pdf" target="_blank">DOWNLOAD</a>
+          Flat Pack Order Form <a href="~/Download/Flat Pack Order Form.pdf?v=4" target="_blank">DOWNLOAD</a>
         </li>
         <li>
-          JanperEdge Order Form <a href="~/Download/JanperEdge Order Form.pdf" target="_blank">DOWNLOAD</a>
+          JanperEdge Order Form <a href="~/Download/JanperEdge Order Form.pdf?v=4" target="_blank">DOWNLOAD</a>
         </li>
       </ul>
     </div>
